--- a/support.html
+++ b/support.html
@@ -13,10 +13,10 @@
         <div class="wrapper">
             <div class="raid"></div>
 		</div>
-
     </body>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="js/reconnecting-websocket.js"></script>
+    <script src="js/fittext.js"></script>
 	<script src="js/main.js"></script>
 </html> 
